<resources>
    <string name="app_name">GithubAppSecondSubmission</string>
    <string name="txt_name">Name</string>
    <string name="txt_type">Type</string>
    <string name="txt_search">Search User</string>
    <string name="txt_imageview">ImageView</string>
    <string name="txt_followers">Followers</string>
    <string name="error_image">Error Image</string>
    <string name="txt_following">Following</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_username">Username</string>
    <string name="txt_company">Company</string>
    <string name="txt_location">Location</string>
    <string name="txt_repository">Repository</string>
</resources>